--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,12 +1,12 @@
-{% set version = "1.0.0" %}
+{% set version = "2.0.0" %}
 
 package:
   name: sarif-tools
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/s/sarif-tools/sarif-tools-{{ version }}.tar.gz
-  sha256: e814d8249f6751f174d012c240b02601b877b78e5c4fe5dd00b30dc796f01ee4
+  url: https://pypi.io/packages/source/s/sarif-tools/sarif_tools-{{ version }}.tar.gz
+  sha256: aae95d255b5e5c989a2043d5441f24a727117da0f49f8cad1e7faf7c69eac3a3
 
 build:
   entry_points:
@@ -22,9 +22,12 @@ requirements:
     - python >=3.8
   run:
     - jinja2 >=3.1.2,<4.0.0
+    - jsonpath-ng >=1.6.0,<1.7.0
     - matplotlib-base >=3.5.1,<4.0.0
     - python >=3.8
     - python-docx >=0.8.11,<0.9.0
+    - pyyaml >=6.0.1,<7.0.0
+
 
 test:
   requires:
